--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,7 @@
     "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.8.0",
-    "connect-redis": "^9.0.0",
+    "connect-redis": "^7.1.1",
     "cors": "^2.8.5",
     "csv-parse": "^6.1.0",
     "csv-parser": "^3.2.0",
@@ -34,6 +34,7 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-linkedin-oauth2": "^2.0.0",
     "razorpay": "^2.9.6",
+    "redis": "^4.7.1",
     "stripe": "^16.0.0",
     "zod": "^4.1.12"
   },
