--- a/client/package.json
+++ b/client/package.json
@@ -24,12 +24,14 @@
     "lucide-react": "^0.553.0",
     "razorpay": "^2.9.6",
     "react": "^19.1.1",
+    "react-calendar-heatmap": "^1.10.0",
     "react-dom": "^19.1.1",
     "react-dropzone": "^14.4.0",
     "react-hot-toast": "^2.6.0",
     "react-razorpay": "^3.0.1",
     "react-router-dom": "^7.9.5",
     "react-youtube": "^10.1.0",
+    "recharts": "^3.7.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -46,6 +48,7 @@
     "globals": "^16.4.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18",
+    "terser": "^5.46.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
     "vite": "^7.1.7"
