--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "lenis": "^1.3.15",
     "lucide-react": "^0.553.0",
     "razorpay": "^2.9.6",
+    "re-resizable": "^6.11.2",
     "react": "^19.1.1",
     "react-calendar-heatmap": "^1.10.0",
     "react-dom": "^19.1.1",
@@ -31,8 +32,8 @@
     "react-razorpay": "^3.0.1",
     "react-router-dom": "^7.9.5",
     "react-youtube": "^10.1.0",
-    "swiper": "^12.1.0",
     "recharts": "^3.7.0",
+    "swiper": "^12.1.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
