udpate full milestoneecosystem added neo theme

--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^2.2.1",
     "naughty-words": "^1.2.0",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.9",
     "openid-client": "^5.7.1",
     "otp-generator": "^4.0.1",
